--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ts-multiplayer",
   "version": "0.0.1",
-  "description": "Awesome project developed with TypeORM.",
+  "description": "The backend for Lands Unknown, an incremental multiplayer",
   "devDependencies": {
-    "ts-node": "3.3.0",
+    "ts-node": "10.9.1",
     "typescript": "4.8.3"
   },
   "dependencies": {
@@ -12,6 +12,6 @@
     "lu-common": "file:../common"
   },
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node -r tsconfig-paths/register src/index.ts"
   }
 }
