--- a/package.json
+++ b/package.json
@@ -1,14 +1,1 @@
-{
-  "name": "lands-unknown-multiplayer",
-  "version": "0.1.0",
-  "private": true,
-  "workspaces": [
-    "backend",
-    "common",
-    "frontend"
-  ],
-  "scripts": {
-    "backend": "npm run start -w ./backend",
-    "frontend": "npm run serve -w ./frontend"
-  }
-}
+{"paths":{"src/*":["./src/*"]},"name":"lands-unknown-multiplayer","version":"0.1.0","private":true,"workspaces":["backend","common","frontend"],"scripts":{"backend":"npm run start -w ./backend","frontend":"npm run serve -w ./frontend"},"devDependencies":{"tsconfig-paths":"^4.1.0"}}
