--- a/package.json
+++ b/package.json
@@ -1,1 +1,14 @@
-{"paths":{"src/*":["./src/*"]},"name":"lands-unknown-multiplayer","version":"0.1.0","private":true,"workspaces":["backend","common","frontend"],"scripts":{"backend":"npm run start -w ./backend","frontend":"npm run serve -w ./frontend"},"devDependencies":{"tsconfig-paths":"^4.1.0"}}
+{
+  "name": "lands-unknown-multiplayer",
+  "version": "0.1.0",
+  "private": true,
+  "workspaces": [
+    "backend",
+    "common",
+    "frontend"
+  ],
+  "scripts": {
+    "backend": "npm run start -w ./backend",
+    "frontend": "npm run serve -w ./frontend"
+  }
+}
