Don't make common a package

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,11 +4,19 @@
       "es5",
       "es6"
     ],
-    "target": "es5",
+    "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "./build",
     "baseUrl": "./",
+    "paths": {
+      "src/*": [
+        "src/*"
+      ],
+      "common/*": [
+        "../common/src/*"
+      ]
+    },
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "sourceMap": true
