--- a/backend/package.json
+++ b/backend/package.json
@@ -3,15 +3,17 @@
   "version": "0.0.1",
   "description": "The backend for Lands Unknown, an incremental multiplayer",
   "devDependencies": {
+    "tsconfig-paths": "^4.1.0",
     "ts-node": "10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "4.8.3"
   },
   "dependencies": {
     "firebase-admin": "^11.0.1",
-    "socket.io": "4.5.2",
-    "lu-common": "file:../common"
+    "socket.io": "4.5.2"
   },
   "scripts": {
+    "dev": "ts-node-dev -r tsconfig-paths/register src/index.ts",
     "start": "ts-node -r tsconfig-paths/register src/index.ts"
   }
 }
