--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
     "frontend"
   ],
   "scripts": {
-    "backend": "npm run start -w ./backend",
+    "backend": "npm run dev -w ./backend",
     "frontend": "npm run serve -w ./frontend"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21",
+    "socket.io": "^4.2.0",
+    "strongly-typed-events": "^3.0.5"
+  },
+  "devDependencies": {
+
   }
 }
