--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "backend": "npm run dev -w ./backend",
-    "frontend": "npm run serve -w ./frontend"
+    "frontend": "npm run dev -w ./frontend"
   },
   "dependencies": {
     "lodash": "^4.17.21",
