--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.1",
   "description": "The backend for Lands Unknown, an incremental multiplayer",
   "devDependencies": {
-    "tsconfig-paths": "^4.1.0",
     "ts-node": "10.9.1",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "4.8.3"
   },
   "dependencies": {
+    "express": "^4.18.1",
     "firebase-admin": "^11.0.1",
     "socket.io": "4.5.2"
   },
