--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,10 @@
     "typescript": "4.8.3"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
-    "firebase-admin": "^11.0.1",
-    "socket.io": "4.5.2"
+    "firebase-admin": "^11.0.1"
   },
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register src/index.ts",
