--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
+    "firebase": "^9.10.0",
+    "firebaseui": "^6.0.1",
     "vue": "^3.2.38"
   },
   "devDependencies": {
