--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "firebase": "^9.10.0",
     "firebaseui": "^6.0.1",
+    "lodash": "^4.17.21",
     "vue": "^3.2.38"
   },
   "devDependencies": {
     "@types/jsdom": "^20.0.0",
+    "@types/lodash": "^4.14.185",
     "@types/node": "^16.11.56",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/test-utils": "^2.0.2",
