--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "preview": "vite preview --port 4173",
     "test:unit": "vitest --environment jsdom",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
+    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+    "heroku" : "npm install && npm run build-only"
   },
   "dependencies": {
     "firebase": "^9.10.0",
