--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "backend": "npm run dev -w ./backend",
     "frontend": "npm run dev -w ./frontend",
-    "start": "npm run build-only -w ./frontend"
+    "start": "npm run heroku -w ./frontend"
   },
   "dependencies": {
     "lodash": "^4.17.21",
