--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "scripts": {
     "backend": "npm run dev -w ./backend",
-    "frontend": "npm run dev -w ./frontend"
+    "frontend": "npm run dev -w ./frontend",
+    "start": "npm run backend"
   }
 }
