--- a/common/package.json
+++ b/common/package.json
@@ -6,7 +6,8 @@
     "typescript": "4.8.3"
   },
   "dependencies": {
-    "strongly-typed-events": "^3.0.5"
+    "strongly-typed-events": "^3.0.5",
+    "yup": "^0.32.11"
   },
   "scripts": {}
 }
