--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,6 +17,8 @@
         "../common/src/*"
       ]
     },
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "sourceMap": true
