--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -7,6 +7,8 @@
     "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "outDir": "./build",
     "baseUrl": "./",
     "paths": {
