--- a/backend/package.json
+++ b/backend/package.json
@@ -3,16 +3,16 @@
   "version": "0.0.1",
   "description": "The backend for Lands Unknown, an incremental multiplayer",
   "devDependencies": {
-    "ts-node": "10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.1.0",
-    "typescript": "4.8.3"
+    "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "firebase-admin": "^11.0.1"
+    "firebase-admin": "^11.0.1",
+    "ts-node": "10.9.1",
+    "tsconfig-paths": "^4.1.0",
+    "typescript": "4.8.3"
   },
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register src/index.ts",
