--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "firebase-admin": "^11.0.1",
+    "sqlite3": "^5.1.2",
     "ts-node": "10.9.1",
     "tsconfig-paths": "^4.1.0",
     "typescript": "4.8.3"
